--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,8 @@
         "usercmd.h": "c",
         "game.h": "c",
         "nui_math.h": "c",
-        "map.h": "c"
+        "map.h": "c",
+        "sprite.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
